SVTR-218 Add an AI tool  to read profile data
